<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.accounts_keeper_android.UpdatePassword">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/old_password" />
        <EditText
            android:id="@+id/update_password_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/new_password"/>
        <EditText
            android:id="@+id/update_password_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight="1" />
    </TableRow>

    <TextView
        android:id="@+id/update_password_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <Button
        android:id="@+id/update_password_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/darkblue"
        android:background="@color/cyan" />

</TableLayout>
